@@ -2,8 +2,9 @@ package amie.rules;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import amie.data.AbstractKB;
 import amie.data.KB;
@@ -11,6 +12,7 @@ import amie.data.KB;
 import amie.data.Schema;
 import amie.data.javatools.datatypes.Pair;
 import amie.data.javatools.filehandlers.TSVFile;
+import amie.rules.format.FastLocaleDouble;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
 
@@ -31,8 +33,7 @@ public class AMIEParser {
         Pair<List<int[]>, int[]> rulePair = kb.rule(s);
         if (rulePair == null)
             return null;
-        Rule resultRule = new Rule(rulePair.second, rulePair.first, 0, kb);
-        return resultRule;
+        return new Rule(rulePair.second, rulePair.first, 0, kb);
     }
 
     public static void normalizeRule(Rule q, KB kb) {
@@ -43,7 +44,7 @@ public class AMIEParser {
                 if (Schema.isVariable(triple[i])) {
                     Character replace = charmap.get(triple[i]);
                     if (replace == null) {
-                        replace = new Character(c);
+                        replace = Character.valueOf(c);
                         charmap.put(triple[i], replace);
                         c = (char) (c + 1);
                     }
@@ -53,15 +54,77 @@ public class AMIEParser {
         }
     }
 
-    public static List<Rule> rules(File f, KB kb) throws IOException {
+    public static List<Rule> parseRules(File f, AbstractKB kb) throws IOException {
         List<Rule> result = new ArrayList<>();
-        for (List<String> record : new TSVFile(f)) {
-            Rule query = rule(record.get(0), kb);
-
-            if (query != null)
-                result.add(query);
+        try (TSVFile fileObj = new TSVFile(f)) {
+            fileObj.next(); // Ignore the header
+            for (List<String> record : fileObj) {
+                Rule rule = rule(record.get(0), kb);
+                rule.setSupport(FastLocaleDouble.parse(record.get(4)));
+                rule.setBodySize(Long.parseLong(record.get(5)));
+                rule.setPcaBodySize(Long.parseLong(record.get(6)));
+                if (rule != null)
+                    result.add(rule);
+            }
         }
         return result;
+    }
+
+    public static List<Rule> parseAnyBurlFormattedRules(File f, AbstractKB kb) throws IOException {
+        List<Rule> result = new ArrayList<>();
+        try (TSVFile fileObj = new TSVFile(f)) {
+            for (List<String> record : fileObj) {
+                Rule rule = anyburlRule(record.get(3), kb);
+                if (rule != null) {
+                    rule.setSupport(FastLocaleDouble.parse(record.get(1)));
+                    rule.setBodySize(Long.parseLong(record.get(0)));
+                    rule.setPcaBodySize(Long.parseLong(record.get(0)));
+                    result.add(rule);
+                }
+            }
+        }
+        return result;
+    }
+
+    private static Set<String> ANYBURL_VARIABLES = new HashSet<>(List.of("X", "Y", "A", "B", "C", "D", "E", "F"));
+
+    private static Rule anyburlRule(String s, AbstractKB kb) {
+        String[] rulePair = s.split(" <= ");
+        if (rulePair.length != 2)
+            return null;
+        String triplePatternRegex = "([-\\w<>_.:\\&\\/]+)\\(([-\\w<>_.:\\&\\/]+)\\s*,\\s*([-\\w<>_.:\\&\\/]+)\\)";
+        Matcher headAtomMatcher = Pattern.compile(triplePatternRegex).matcher(rulePair[0]);
+        if (!headAtomMatcher.find())
+            return null;
+        String predicate = headAtomMatcher.group(1);
+        String subject = headAtomMatcher.group(2);
+        String object = headAtomMatcher.group(3);
+        if (ANYBURL_VARIABLES.contains(subject))
+            subject = "?" + subject.toLowerCase();
+        if (ANYBURL_VARIABLES.contains(object))
+            object = "?" + object.toLowerCase();
+
+        int headAtom[] = new int[]{kb.map(subject), kb.map(predicate), kb.map(object)};
+        Matcher bodyAtomMatcher = Pattern.compile(triplePatternRegex).matcher(rulePair[1]);
+
+        List<int[]> bodyAtoms = new ArrayList<>();
+        while(bodyAtomMatcher.find()) {
+            predicate = bodyAtomMatcher.group(1);
+            subject = bodyAtomMatcher.group(2);
+            object = bodyAtomMatcher.group(3);
+            if (predicate == null || subject == null || object == null)
+                return null;
+
+            if (ANYBURL_VARIABLES.contains(subject))
+                subject = "?" + subject.toLowerCase();
+            if (ANYBURL_VARIABLES.contains(object))
+                object = "?" + object.toLowerCase();
+
+            bodyAtoms.add(new int[]{kb.map(subject), kb.map(predicate), kb.map(object)});
+        }
+
+        Rule resultRule = new Rule(headAtom, bodyAtoms, 0, kb);
+        return resultRule;
     }
 
     public static void main(String[] args) {
